WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240979
REGRESSION (
250981@main
): Two SOAuthorization API tests failing
https://bugs.webkit.org/show_bug.cgi?id=240979
Summary
REGRESSION (250981@main): Two SOAuthorization API tests failing
Truitt Savell
Reported
2022-05-26 14:46:44 PDT
These two tests began failing after the changes in
https://github.com/WebKit/WebKit/commit/f3f187aeda4ffc5ee0edfda8ecd26ac0d3c38a7b
Failed TestWebKitAPI.SOAuthorizationRedirect.InterceptionSucceed3 2022-05-26 13:18:21.639 com.apple.WebKit.WebContent.Development[48066:236882663] ApplePersistence=NO /Volumes/Data/worker/Apple-Monterey-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/TestSOAuthorization.mm:625 Value of: gAuthorization.enableEmbeddedAuthorizationViewController Actual: false Expected: true Crashed TestWebKitAPI.SOAuthorizationPopUp.InterceptionSucceedTwice 2022-05-26 13:18:08.205 com.apple.WebKit.WebContent.Development[47988:236881731] ApplePersistence=NO SecretWebView is created. 2022-05-26 13:18:08.248 com.apple.WebKit.WebContent.Development[47988:236881725] XType: can't switch to GlobalFontRegistry. XTFontStaticRegistry is not enabled. SecretWebView is cleaned.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-26 14:47:05 PDT
<
rdar://problem/93996565
>
Truitt Savell
Comment 2
2022-05-26 14:47:14 PDT
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.SOAuthorizationRedirect.InterceptionSucceed3&test=TestWebKitAPI.SOAuthorizationPopUp.InterceptionSucceedTwice
Brent Fulgham
Comment 3
2022-05-27 11:23:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1104
EWS
Comment 4
2022-05-31 10:13:48 PDT
Committed
r295058
(
251153@main
): <
https://commits.webkit.org/251153@main
> Reviewed commits have been landed. Closing PR #1104 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug