REGRESSION (250981@main): Two SOAuthorization API tests failing https://bugs.webkit.org/show_bug.cgi?id=240979 <rdar://93996565>

Reviewed by Chris Dumez.

In Bug 240739 I modified AppSSO to lazily initialize the SOAuthenticationCoordinator. This introduced
two problems in the API Tests:
1. SOAuthorizationRedirect.InterceptionSucceed3 expected SOAuthentiationCoordinator initialization to
   happen as soon as the WKWebsiteDataStore was created, but this is now too soon. The assertion just
   needed to be made after an AppSSO operation was called that would construct the SSO object.
2. SOAuthorizationPopUp.InterceptionSucceedTwice revealed a real bug. We almost never start an AppSSO
   flow, then turn off the feature -- except in the case of a pop-up authentication, which creates a
   secret hidden window without AppSSO turned on. Hitting this test case caused a crash that needed
   to be addressed by checking for this rare case, and making sure we didn't dereference a nullptr.

* Source/WebKit/UIProcess/Cocoa/SOAuthorization/PopUpSOAuthorizationSession.mm:
(WebKit::PopUpSOAuthorizationSession::initSecretWebView): Properly disable AppSSO through the WKPreference,
rather than reaching into the object to modify WebKit internal state.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::trySOAuthorization): Don't attempt to dereference the SOAuthenticationCoordinator when the
AppSSO feature is turned off for a pop-up window.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/TestSOAuthorization.mm:
(TestWebKitAPI::TEST): Move the assertion to after AppSSO initialization is complete.

Canonical link: https://commits.webkit.org/251153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295058 268f45cc-cd09-0410-ab3c-d52691b4dbfc